--- a/mystl.css
+++ b/mystl.css
@@ -1,3 +1,14 @@
 body{
     background-color: red;
 }
+.parent{
+    width:100%;
+    height: 400px;
+    background-color: aqua;
+}
+.child{
+    background-color: yellow;
+    height: 100px;
+    width: 50%;
+    position: relative;
+}
